🔧 E15a: the build stops lying about its JDK, its scopes, and its exclusions
Four build-hygiene fixes from the adoption review, authored by a build agent and
merged after maintainer review found and fixed two defects in the patch.

- The surefire argLine -XX:+EnableDynamicAgentLoading (JDK 21+) no longer crashes
  the advertised JDK 17: it lives in a profile keyed on <jdk>[21,)</jdk>.
  help:active-profiles confirms activation; profile and base plugin configs merge,
  so excludedGroups and argLine both apply.
- micrometer-core: provided -> optional. Same measured non-transitivity (the P8b
  two-module-reactor measurement stays cited), honest semantics - no container
  supplies this jar. Spec 8.6's row updated in the same commit.
- @Tag("spike")/@Tag("oracle") + excludedGroups replace the naming-convention
  exclusion that any -Dtest= silently defeated. Plain mvn test now runs 385 with
  zero spikes and zero containers; -Dgroups= opts back in and survives -Dtest=.
  CLAUDE.md's Commands section rewritten - the 6.2M-row hazard is defused, not
  documented.
- Two ArchUnit rules enforce the non-suspend invariant that made synchronized
  (not Mutex) correct for the single DuckDB connection: no Continuation
  dependency in infra.etl.duckdb.. or in TaskEngine and its nested classes.

Review findings fixed before merge: the submitted TaskEngine rule matched
haveSimpleName("TaskEngine") and missed the inner class Run - where the actual
crash path (execute -> pipe -> connection) lives. Mutation-proven: a suspend fun
on Run passed the submitted rule and fails the merged one; a suspend fun in
ScratchDb fails the duckdb rule. Both probes removed. Also restored the P8b
measurement the patch had deleted from the pom comment.

385 tests green via plain mvn test.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>